--- a/WebContent/fx2.html
+++ b/WebContent/fx2.html
@@ -5,31 +5,22 @@
 <link type="text/css" rel="stylesheet" href="css2/register.css">
 <title>分享</title>
 </head>
-<style>
-body {
-	background-repeat: no-repeat;
-	background-size: cover;
-}
-</style>
 <body>
 	<div class="whole">
 
-		<form class="contact_form" action="fxsave.jsp" method="post"
+		<form class="contact_form" action="plsave.jsp" method="post"
 			name="contact_form">
 			<ul>
-				<li class="usually">
-					<h2 style="color: white">分享（share）</h2>
-				</li>
-				<li class="usually"><span style="color: white">佳句:</span> <textarea
-						rows="6" cols="100" name="introduction1" placeholder="请输入你想分享的句子"
-						class="message" required></textarea></li>
-
 				<li class="usually"><span style="color: white">感想:</span> <textarea
-						rows="6" cols="100" name="introduction2" placeholder="请输入你的感悟"
+						rows="6" cols="100" name="introduction" placeholder="请输入你的感悟"
 						class="message" required></textarea></li>
 
 				<li class="usually"><span style="color: white">学号/工号:</span> <textarea
 						rows="1" cols="100" name="bno" placeholder="请输入你的学号/工号"
+						class="message" required></textarea></li>
+
+				<li class="usually"><span style="color: white">对方学号/工号:</span>
+					<textarea rows="1" cols="100" name="bno1" placeholder="请输入对方的学号/工号"
 						class="message" required></textarea></li>
 
 				<li class="usually"><span style="color: white">时间:</span> <textarea
